fix z-index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,7 @@
   }
 
   .top-bar {
+    z-index: 999;
     a:hover {
       background-color: transparent;
     }
